# nbteditor

./: .gitignore  .gitmodules  Cargo.toml
data/: .gitignore
libnbt/: Cargo.toml
libnbt/src/: consts.rs  decode.rs  encode.rs  err.rs  lib.rs  macros.rs  raw.rs  ser.rs
libnbt/src/de/: access.rs  dec.rs  mod.rs  visit.rs
libnbt/tests/: decode.rs  encode.rs
nbtc/: Cargo.toml
nbtc/src/: cli.rs  cmd.rs  err.rs  main.rs  util.rs
nbtc/src/test/: cli.rs
nbtc/src/xml/: read.rs  write.rs
src/: cli.rs  cmd.rs  err.rs  help.txt  main.rs  state.rs  util.rs  xml.rs
src/test/: cli.rs
src/xml/: write.rs
