[package]
name = "nbt-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9.21"

[dependencies.inotify]
package = "nix"
features = ["inotify"]
version = "0.26.2"

[dependencies.nbt]
package = "named-binary-tag"
features = ["archive", "serde"]
# version = "0.7.0-dev"
git = "https://github.com/mrghosti3/named-binary-tag.git"
branch = "dev"
