[package]
name = "nbtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9.21"
nix = { version = "0.26.2", features = ["inotify"] }

[dependencies.nbt]
package = "named-binary-tag"
features = ["archive", "serde"]
path = "lib/nbt"
